# projects

./: .gitignore  README.md
ai/: flake.nix
ai-presentation/client/: README.md
ai-presentation/server/: index.js
ai/N.E.A.T./: README.md  requirements.txt
ai/ai-presentation/: .gitignore  README.md
ai/ball-fall-game-ai/: config.py  gameobject.py
ai/examples/: _pytorch.ipynb  distributions.py  examples.ipynb  machine-learning.ipynb  main.py  model.py  optimizing.py  quickstart.py
ai/models/: model.pth  model_weights.pth
ai/neural-style/: database.js  neural_style.py  package-lock.json  package.json
algorithms/: sort.py
ball-fall-game-ai/: ball_fall.py  neat.py  neuralnetwork.py  shell.nix
browser-homepage/src/: Flower.elm  Main.elm  other.elm
cybersecurity/rick-roll-detector/: README.md
cybersecurity/rick-roll-virus/: .gitignore  README.md
data-annotation/: .envrc  .gitignore  Dockerfile  flake.nix  package-lock.json  package.json  requirements.txt
dsa/: dsa.c  dsa.js  dsa.py
dsa/algorithms/: main.py
go-server-utils/: go.mod  go.sum
go-server-utils/redirect/: main.go
go-server-utils/requests/: main.go
go-server-utils/server-utils/: main.go
haskell-funtime/: README.md  shell.nix
haskell-funtime/src/: CategoryTheory.hs  IO.hs  LambdaCalculus.hs  Mutable.hs  QP.hs  Types.hs
homotopy-type-theory/: HoTT.agda  HoTT.agdai  Homotopy.agda  Homotopy.agdai  NaturalNumbers.agdai  hott.agdai
l-system/: property.json  requirements.txt
langs/asm/: 2.asm  5.asm  asm
langs/bash/: 1  loading-bar.sh
langs/cue/: flake.nix
langs/dhall/: flake.nix
langs/elm/: flake.nix
langs/go/: flake.nix  go-server-utils  rick-roll-detector
langs/haskell/: flake.nix  shell.nix
langs/java/: LearnXInY.java  flake.nix
langs/javascript/: why.js
langs/lean4/: flake.nix
langs/nickel/: flake.nix
langs/nim/: flake.nix
langs/node/: flake.nix
langs/odin/: flake.nix
langs/protobuf/: flake.nix
langs/pulumi/: flake.nix
langs/python/: byte_code.ipynb  concurrency.py  descriptors.ipynb  dictionaries.ipynb  log.docx  log.txt  metaclass.ipynb
langs/ruby/: flake.nix
langs/rust/: flake.nix
langs/rust/learn/: Cargo.toml
langs/rust/learn/concurrency/: Cargo.toml
langs/rust/learn/concurrency/src/: lib.rs
langs/rust/learn/minigrep/src/: main.rs
langs/rust/learn/oop/: Cargo.toml
langs/rust/learn/oop/src/: lib.rs
langs/rust/learn/server/: Cargo.toml
langs/rust/learn/tutorial/: Cargo.toml
langs/rust/learn/tutorial/src/: main.rs  main_v2.rs  tests.rs
langs/scala/: flake.nix
langs/shell/: flake.nix
langs/swi-prolog/: flake.nix
langs/tex/: flake.nix
langs/vlang/: flake.nix
languages/: README.md  flake.nix
languages/asm/: 1.asm  3.asm  4.asm  fib.c  main.c
languages/awk/: main.awk
languages/bash/: notes.sh
languages/bun/: flake.nix
languages/c/: flake.nix  result  shell.nix
languages/clojure/: flake.nix
languages/elixir/: flake.nix
languages/empty/: flake.nix
languages/gleam/: flake.nix
languages/hashi/: flake.nix
languages/haskell/: nix-shell.hs  result
languages/haskell/haskell-funtime/: haskell-funtime.cabal
languages/haskell/haskell-funtime/src/: CT.hs
languages/haskell/haskell-funtime/src/CT/: Limits.hs  YonedaLemma.hs
languages/haskell/haskell-funtime/src/IO/: JsonParser.hs  Puzzles.hs  Todo.hs  palindrome.txt  palindrome2.txt
languages/haskell/haskell-funtime/src/IO/StdIO/: main  main.hi  test.txt
languages/haskell/haskell-funtime/src/Monads/: Error.hs  Writer.hs
languages/haskell/haskell-funtime/src/Optics/: Folds.hs  Store.hs  Virtual.hs
languages/haskell/haskell-funtime/src/Parsers/NanoParser.hs/: Lexer.hs  Main.hs  Transpiler.hs
languages/haskell/haskell-funtime/src/Types/: Extensible.hs
languages/haxe/: flake.nix
languages/java/: flake.nix  result
languages/jupyter/: flake.nix
languages/kotlin/: flake.nix
languages/nix/: flake.nix  result
languages/node/: result
languages/ocaml/: flake.nix
languages/opa/: flake.nix
languages/php/: flake.nix  index.php  launch.sh  result
languages/platformio/: flake.nix
languages/purescript/: flake.nix
languages/python/: cli.py  decorators.ipynb  flake.nix  result  screencapture.py  texttospeech.py
languages/r/: flake.nix  result
languages/rust/: learnxiny.rs
languages/rust-toolchain/: flake.nix
languages/swift/: flake.nix
languages/zig/: flake.nix
misc/homotopy-type-theory/: NaturalNumbers.agda  (+3 more)
mls-c01/: AmazonSageMakerFullAccess
mr-robot/: package-lock.json  package.json  requirements.txt  robot.py
neural-style/: run_neural_style.py
parsers/: README.md
remote-note-server/: .gitignore  design-doc.md
resume/: cvclass.cls  main.aux  main.bcf  main.run.xml  main.tex  pdfa.xmpi  run.sh
rick-roll-virus/: README.md  rick-roll.py
scripts/: alarm  browser-profiles  fix_history.sh  prj  prj2
sites/haskell-reflex/max-studio/backend/: Api.hs  Db.hs  Main.hs  MyCookie.hs  Quaalude.hs  backend.cabal
sites/haskell-reflex/max-studio/backend/Api/: Session.hs  User.hs
sites/haskell-reflex/max-studio/backend/Core/: App.hs  Config.hs  Db.hs
sites/haskell-reflex/max-studio/common/: Common.hs  Quaalude.hs  common.cabal
sites/haskell-reflex/max-studio/common/Common/: Contact.hs  Form.hs
sites/haskell-reflex/max-studio/frontend/: Main.hs  Quaalude.hs  frontend.cabal
sites/haskell-reflex/max-studio/frontend/Page/: About.hs  Home.hs  Studio.hs
sites/haskell-reflex/nyah-dogwalking/backend/: Api.hs  Db.hs  Main.hs  Quaalude.hs  backend.cabal
sites/haskell-reflex/nyah-dogwalking/backend/Api/: Secret.hs  User.hs
sites/haskell-reflex/nyah-dogwalking/backend/Core/: App.hs  Config.hs
sites/haskell-reflex/nyah-dogwalking/common/: Common.hs  common.cabal
sites/haskell-reflex/workspace/backend/: Main.hs  backend.cabal
sites/haskell-reflex/workspace/common/: common.cabal
sites/haskell-reflex/workspace/frontend/: LICENSE  Main.hs  Main.js_hi  Main.js_o  frontend.cabal
wikipedia-cloud/: .gitignore  README.md  index.html  store-titles.c  store-titles.cpp
wikipedia-word-cloud/: Makefile  run.py  store-titles.sh
(+775 files in other folders)
