[package]
name = "test1"
version = "0.1.0"
authors = ["t-wilkinson <winston.trey.wilkinson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.5.5"
oop = { path = "./oop" }
minigrep = { path = "./minigrep" }
concurrency = { path = "./concurrency" }
structures = { path = "./structures" }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[workspace]
members = [
    "tutorial",
    "minigrep",
    "structures",
    "concurrency",
    "oop",
    "server",
]
