cabal-version: 2.2

name:           haskell-funtime
version:        0.1.0.0
author:         Trey Wilkinson
maintainer:     winston.trey.wilkinson@gmail.com
copyright:      2020 Trey Wilkinson
build-type:     Simple


library
  default-language: Haskell2010
  hs-source-dirs: src
  default-extensions: UnicodeSyntax
  exposed-modules:
      CT
      CT.Adjunction
      CT.YonedaLemma
      CT.Limits
      IO
      IO.JsonParser
      IO.Palindrome
      IO.Puzzles
      IO.Todo
      LambdaCalculus
      Main
      Monads.Cont
      Monads.Error
      Monads.Free
      Monads.Polysemy
      Monads.Reader
      Monads.ST
      Monads.STM
      Monads.State
      Monads.Writer
      Mutable
      Optics
      Optics.Folds
      Optics.GeorgeWilson
      Optics.Lens
      Optics.Prism
      Optics.Store
      Optics.Virtual
      Optics.Work
      Parsers.Main
      Types
      Types.Extensible
      Types.Generics
      Types.III
      Types.Play
  build-depends:
    , aeson
    , QuickCheck
    , aeson
    , base
    , base-compat-batteries
    , bytestring
    , containers
    , criterion
    , directory
    , first-class-families
    , hspec
    , hspec-wai
    , http-client
    , http-types
    , lens
    , lens
    , lens-aeson
    , megaparsec
    , mtl
    , parsec
    , parser-combinators
    , polysemy
    , profunctors
    , random
    , servant
    , servant-client
    , servant-server
    , stm
    , text
    , time
    , transformers
    , unordered-containers
    , vector
    , wai
    , warp
    , Cabal
