cabal-version:       >=1.10
name:                backend
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Winston Trey Wilkinson
maintainer:          winston.trey.wilkinson@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable backend
  main-is:             Main.hs
  build-depends:       base
                     , aeson
                     , common
                     , reflex
                     , reflex-dom
                     , servant
                     , servant-server
                     , wai
  default-language:    Haskell2010
