cabal-version:       >=1.10
name:                common
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Winston Trey Wilkinson
maintainer:          winston.trey.wilkinson@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable common
  main-is:             Main.hs
  build-depends:       base 
  default-language:    Haskell2010

library
  hs-source-dirs: src
  exposed-modules: Common
  build-depends:       base

