cabal-version:       >=1.10
name:                frontend
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Winston Trey Wilkinson
maintainer:          winston.trey.wilkinson@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable frontend
  main-is:             Main.hs
  build-depends:       base
                     , common
                     , reflex
                     , reflex-dom
                     , containers
                     , text
                     , lens
                     , time
                     , witherable
                     -- , clay
  default-language:    Haskell2010
